--- a/Phase 5: Deployment and Productionization/code/templates/base.html
+++ b/Phase 5: Deployment and Productionization/code/templates/base.html
@@ -19,7 +19,7 @@
 <body class="w3-flat-silver">
     <div class="w3-container form-container-wrapper w3-padding-32 w3-large">
         <div class="w3-card-4 form-container w3-flat-clouds">
-            <div class="w3-container w3-blue-grey w3-center">
+            <div class="w3-container w3-blue-grey w3-center w3-padding-16">
                 <h2>Calculate Match percentage of Resume for a Job description</h2>
             </div>
             {% block maincontent %}{% endblock %}
