reduced latency and added project report

--- a/Phase 5: Deployment and Productionization/code/templates/index.html
+++ b/Phase 5: Deployment and Productionization/code/templates/index.html
@@ -7,7 +7,7 @@
         <label class="">Resume PDF</label>
         <input type="file" name="resume" accept=".pdf" required>
     </p>
-    <p><button type="submit" class="w3-btn w3-padding w3-blue-grey" style="width:133px">Calculate &nbsp; ❯</button></p>
+    <p><button type="submit" class="w3-btn w3-padding w3-green" style="width:133px">Calculate &nbsp; ❯</button></p>
     <p class="w3-text-grey">Calculate the match percentage of a candidate who fits the job role based on the job description.</p>
 </form>
 {% endblock %}
