--- a/Phase 5: Deployment and Productionization/code/templates/base.html
+++ b/Phase 5: Deployment and Productionization/code/templates/base.html
@@ -19,11 +19,12 @@
 <body class="w3-flat-silver">
     <div class="w3-container form-container-wrapper w3-padding-32 w3-large">
         <div class="w3-card-4 form-container w3-flat-clouds">
-            <div class="w3-container w3-blue-grey w3-center w3-padding-16">
+            <div class="w3-container w3-green w3-center w3-padding-16">
                 <h2>Calculate Match percentage of Resume for a Job description</h2>
             </div>
             {% block maincontent %}{% endblock %}
-            <div class="w3-container w3-blue-grey">
+            <div class="w3-container w3-green">
+                <p>Blog link:- <a target="_blank" href="https://sanjayc.medium.com/compute-the-match-percentage-of-a-candidate-for-a-job-role-aa3adc7bfbb5">https://sanjayc.medium.com/aa3adc7bfbb5</a></p>
                 <p>Git repo:- <a target="_blank" href="https://github.com/scsanjay/jd_resume_match_percentage">https://github.com/scsanjay/jd_resume_match_percentage</a></p>
                 <p>Developed by <a target="_blank" href="https://sanjayc.net">Sanjay Chouhan</a></p>
             </div>
